fix chart bg on mobile

--- a/jchords/src/components/song/chart/chart.css
+++ b/jchords/src/components/song/chart/chart.css
@@ -12,6 +12,7 @@
   border-radius: 24px;
 }
 #chart-small {
+  flex-grow: 1;
   padding: 16px;
   padding-bottom: 32px;
 }
